test/corpus/delete.txt
================================================================================
DELETE statement
================================================================================

DELETE FROM foo;
DELETE FROM foo WHERE name = 'bar';

--------------------------------------------------------------------------------

(source_file
  (delete_statement
    (from_clause
      (identifier)))
  (delete_statement
    (from_clause
      (identifier))
    (where_clause
      (binary_expression
        (identifier)
        (string
          (content))))))

================================================================================
DELETE with CTE
================================================================================

WITH t AS (
    SELECT * FROM foo
)
DELETE FROM bar;

WITH RECURSIVE search_tree(id, link, data) AS NOT MATERIALIZED(
    SELECT * FROM foo
)
DELETE FROM bar;

--------------------------------------------------------------------------------

(source_file
  (delete_statement
    (with_clause
      (cte
        (identifier)
        (select_statement
          (select_clause
            (select_clause_body
              (asterisk_expression)))
          (from_clause
            (identifier)))))
    (from_clause
      (identifier)))
  (delete_statement
    (with_clause
      (cte
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (select_statement
          (select_clause
            (select_clause_body
              (asterisk_expression)))
          (from_clause
            (identifier)))))
    (from_clause
      (identifier))))

================================================================================
DELETE statement with RETURNING clause
================================================================================

DELETE FROM test_user
WHERE id = 2
RETURNING id, name;

--------------------------------------------------------------------------------

(source_file
  (delete_statement
    (from_clause
      (identifier))
    (where_clause
      (binary_expression
        left: (identifier)
        right: (number)))
    (returning_clause
      (identifier)
      (identifier))))

================================================================================
DELETE statement with RETURNING *
================================================================================

DELETE FROM products
  WHERE obsoletion_date = 'today'
  RETURNING *;

--------------------------------------------------------------------------------

(source_file
  (delete_statement
    (from_clause
      (identifier))
    (where_clause
      (binary_expression
        left: (identifier)
        right: (string
          content: (content))))
    (returning_clause
      (asterisk_expression))))
